# testcontainers-cpp

./: .clang-format  .clang-tidy  .clangd  .gitignore  .lsan-suppressions.txt  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  TODO.md  conanfile.py  mkdocs.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/setup-build/: action.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml
cmake/: testcontainersConfig.cmake.in
cmake/cmake-conan/: README.md  conan_provider.cmake
docs/: 01-how-testcontainers-rs-works.md  02-dependencies.md  03-cxx-interface-evaluation.md  04-windows-containers-feasibility.md  05-tier4-ecosystem-modules.md  06-feature-notes.md  07-public-api-test-coverage.md  TODO.md  conventions.md  feature-notes.md  public-api-test-coverage.md  requirements.txt
docs/doxygen/: Doxyfile  mainpage.md
docs/site/: configuration.md  core-concepts.md  getting-started.md  index.md
docs/site/modules/: clickhouse.md  index.md  kafka.md  mariadb.md  minio.md  mongodb.md  mosquitto.md  mysql.md  nats.md  opensearch.md  postgresql.md  rabbitmq.md  redis.md  rustfs.md  scylladb.md
examples/: ping.cpp  smoke.cpp
include/testcontainers/: ConnectionString.hpp  Container.hpp  ContainerPort.hpp  ContainerRequest.hpp  CopyToContainer.hpp  Device.hpp  DockerComposeContainer.hpp  Error.hpp  ExecOptions.hpp  ExecResult.hpp  GenericBuildableImage.hpp  GenericImage.hpp  Healthcheck.hpp  ImageFromDockerfile.hpp  Lifecycle.hpp  Mount.hpp  Network.hpp  RegistryAuth.hpp  RestartPolicy.hpp  TtySize.hpp  Ulimit.hpp  Volume.hpp  WaitFor.hpp  modules.hpp  testcontainers.hpp  version.hpp
include/testcontainers/docker/: BuildOptions.hpp  ContainerSpec.hpp  DockerClient.hpp  DockerHost.hpp  Logs.hpp  Timeouts.hpp
include/testcontainers/modules/: ClickHouse.hpp  Kafka.hpp  KafkaContainer.hpp  MariaDB.hpp  MariaDBContainer.hpp  MinIO.hpp  MongoDB.hpp  MongoDBContainer.hpp  Mosquitto.hpp  MySQL.hpp  MySQLContainer.hpp  NATS.hpp  OpenSearch.hpp  PostgreSQL.hpp  PostgreSQLContainer.hpp  RabbitMQ.hpp  RabbitMQContainer.hpp  Redis.hpp  RedisContainer.hpp  RustFS.hpp  ScyllaDB.hpp
include/testcontainers/modules/detail/: MySqlFamily.hpp
packaging/conan-center/: README.md
packaging/conan-center/recipes/testcontainers-cpp/: config.yml
packaging/conan-center/recipes/testcontainers-cpp/all/: conandata.yml  conanfile.py
packaging/conan-center/recipes/testcontainers-cpp/all/test_package/src/: test_package.cpp
src/: AsioRun.hpp  Config.cpp  Config.hpp  ConnectionString.cpp  Container.cpp  Deadline.hpp  DockerComposeContainer.cpp  Env.hpp  FileRead.hpp  GenericBuildableImage.cpp  GenericImage.cpp  HostAddress.cpp  HostAddress.hpp  HostPortForwarding.cpp  HostPortForwarding.hpp  ImageFromDockerfile.cpp  Network.cpp  Process.cpp  Process.hpp  RandomHex.hpp  Reaper.cpp  Reaper.hpp  Reuse.cpp  Reuse.hpp  Runner.cpp  Runner.hpp  Strings.hpp  Volume.cpp  WaitStrategies.cpp  WaitStrategies.hpp  version.cpp
src/compose/: ComposeClients.cpp  ComposeClients.hpp  ComposeCommand.cpp  ComposeCommand.hpp  Process.cpp  Process.hpp
src/docker/: ApiMapping.cpp  ApiMapping.hpp  Auth.cpp  Auth.hpp  DockerClient.cpp  DockerHost.cpp  DockerIgnore.cpp  DockerIgnore.hpp  DuplexExchange.hpp  HostResolve.hpp  LogDemux.cpp  LogDemux.hpp  Ports.hpp  StreamRead.hpp  Tar.cpp  Tar.hpp  TlsConfig.hpp  Transport.cpp  Transport.hpp
src/modules/: ClickHouse.cpp  Kafka.cpp  KafkaContainer.cpp  KafkaDetail.cpp  KafkaDetail.hpp  MariaDB.cpp  MariaDBContainer.cpp  MinIO.cpp  ModuleDetail.cpp  ModuleDetail.hpp  MongoDB.cpp  MongoDBContainer.cpp  Mosquitto.cpp  MySQL.cpp  MySQLContainer.cpp  MySqlFamily.cpp  MySqlFamily.hpp  NATS.cpp  OpenSearch.cpp  PostgreSQL.cpp  PostgreSQLContainer.cpp  RabbitMQ.cpp  RabbitMQContainer.cpp  Redis.cpp  RedisContainer.cpp  RustFS.cpp  ScyllaDB.cpp
tests/: .clang-tidy
tests/integration/: AuthTest.cpp  BuildImageTest.cpp  CapMask.hpp  ComposeTest.cpp  ContainerConfigTest.cpp  ContainerLifecycleTest.cpp  ContainerLogsTest.cpp  CopyTest.cpp  EngineGuard.hpp  ExecTest.cpp  HostAccessTest.cpp  HttpGet.hpp  LifecycleTest.cpp  MqttConnect.hpp  NetworkTest.cpp  PortGettersTest.cpp  ReaperTest.cpp  RedisMvpTest.cpp  RedisPing.hpp  ReuseTest.cpp  TempPaths.hpp  TlsTransportTest.cpp  TtyTest.cpp  VolumeTest.cpp  WaitStrategiesTest.cpp  WindowsContainerTest.cpp  WindowsEngine.hpp
tests/integration/modules/: ClickHouseModuleTest.cpp  KafkaModuleTest.cpp  MariaDBModuleTest.cpp  MinIOModuleTest.cpp  MongoDBModuleTest.cpp  MosquittoModuleTest.cpp  MySQLModuleTest.cpp  NATSModuleTest.cpp  OpenSearchModuleTest.cpp  PostgreSQLModuleTest.cpp  RabbitMQModuleTest.cpp  RedisModuleTest.cpp  RustFSModuleTest.cpp  ScyllaDBModuleTest.cpp
tests/support/: TestEnv.hpp
tests/unit/: ApiMappingTest.cpp  ApiVersionTest.cpp  AuthTest.cpp  BodyLimitTest.cpp  BuildWireTest.cpp  CannedHttpServer.hpp  CannedHttpServerTest.cpp  CommandWaitWireTest.cpp  ComposeCommandTest.cpp  ConfigTest.cpp  ConnectionStringTest.cpp  ContainerPortTest.cpp  CopyWireTest.cpp  DockerClientSessionTest.cpp  DockerComposeContainerTest.cpp  DockerHostTest.cpp  DockerIgnoreTest.cpp  ErrorModelTest.cpp  ExecWireTest.cpp  GenericImageTest.cpp  HealthcheckTest.cpp  HostAddressTest.cpp  HostResolveTest.cpp  LogDemuxTest.cpp  LoopbackServer.hpp  MountTest.cpp  PipeServer.hpp  PortsTest.cpp  ProcessTest.cpp  PullRetryTest.cpp  ReaperTest.cpp  ResponseTest.cpp  ReuseTest.cpp  RunnerTest.cpp  StreamReadTest.cpp  TarTest.cpp  TempHome.hpp  TestSupport.hpp  TlsConfigTest.cpp  TransportExchangeTest.cpp  (+4 more)
tests/unit/modules/: ClickHouseTest.cpp  KafkaContainerTest.cpp  KafkaTest.cpp  MinIOTest.cpp  MongoDBContainerTest.cpp  MongoDBTest.cpp  MosquittoTest.cpp  MySqlFamilyTest.cpp  NATSTest.cpp  OpenSearchTest.cpp  PostgreSQLContainerTest.cpp  PostgreSQLTest.cpp  RabbitMQContainerTest.cpp  RabbitMQTest.cpp  RedisContainerTest.cpp  RedisTest.cpp  RustFSTest.cpp  ScyllaDBTest.cpp
